Fix w32api build flags

--- a/w32api/Makefile
+++ b/w32api/Makefile
@@ -1,6 +1,6 @@
 include ../conf
 
-TARGET_ARCH= -mno-cygwin
+TARGET_ARCH=
 CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES) $(MYCFLAGS)
 DEFINES= -DWIN32_LEAN_AND_MEAN -DNOGDI
 INCLUDES= $(LUAINC)
