Update Makefiles with MYCFLAGS
This allows custom CFLAGS to be passed on the command line when invoking
`make`, such that MYCFLAGS are appended to CFLAGS.

--- a/posix/Makefile
+++ b/posix/Makefile
@@ -1,6 +1,6 @@
 include ../conf
 
-CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES)
+CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES) $(MYCFLAGS)
 DEFINES= -D_XOPEN_SOURCE=600 $(POSIX_SPAWN)
 INCLUDES= $(LUAINC)
 WARNINGS= -W -Wall
