--- a/w32api/Makefile
+++ b/w32api/Makefile
@@ -1,7 +1,7 @@
 include ../conf
 
 TARGET_ARCH= -mno-cygwin
-CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES)
+CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES) $(MYCFLAGS)
 DEFINES= -DWIN32_LEAN_AND_MEAN -DNOGDI
 INCLUDES= $(LUAINC)
 WARNINGS= -W -Wall
