Move Lua Extension API functions into sub tables
This moves the Lua Extension API functions into I/O Extension and OS
Extension sub tables in the `ex` namespace under `iox` and `osx`,
respectively.

--- a/w32api/Makefile
+++ b/w32api/Makefile
@@ -1,13 +1,19 @@
 include ../conf
 
-TARGET_ARCH=
+TGT_ARCH=
 CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES) $(MYCFLAGS)
 DEFINES= -DWIN32_LEAN_AND_MEAN -DNOGDI
 INCLUDES= $(LUAINC)
 WARNINGS= -W -Wall
+LIBS= $(LUALIB)
+
+TDIR?= ../ex
+T?= core.dll
+default: all
 
 OBJS= ex.o spawn.o pusherror.o dirent.o
-LIBS= $(LUALIB)
-ex.dll: $(OBJS); $(CC) $(TARGET_ARCH) -shared -o $@ $(OBJS) $(LIBS)
+$(TDIR):; mkdir -p $(TDIR)
+$(TDIR)/$(T): $(OBJS) | $(TDIR); $(CC) $(TGT_ARCH) -shared -o $@ $(OBJS) $(LIBS)
+all: $(TDIR)/$(T) | $(TDIR); cp -p ../src/*.lua $(TDIR)
 
-clean:; rm -f ex.dll *.o
+clean:; rm -rf *.dll *.o $(TDIR)
