--- a/posix/Makefile
+++ b/posix/Makefile
@@ -1,7 +1,7 @@
 include ../conf
 
 CFLAGS= $(WARNINGS) $(DEFINES) $(INCLUDES) $(MYCFLAGS)
-DEFINES= -D_XOPEN_SOURCE=600 $(POSIX_SPAWN)
+DEFINES= -D_XOPEN_SOURCE=600 -D_GNU_SOURCE $(POSIX_SPAWN)
 INCLUDES= $(LUAINC)
 WARNINGS= -W -Wall
 LIBS= $(LUALIB)
